--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,16 @@ ENV/
 env.bak/
 venv.bak/
 
+# --- Large binaries / downloads / installers ---
+*.zip
+*.tar.gz
+*.tar
+*.sh
+*.exe
+*.dmg
+*.pkg
+*.msi
+
 # Spyder project settings
 .spyderproject
 .spyproject
